src/test/deca/context/invalid/added/wrong_override.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  int x(){
    return 4;
  }
}

class B extends A{
  int x = 3;
}

{}
